Finish static pages

--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,5 +1,5 @@
-<% provide :title, 'Help'  %>
-<h1>Help</h1>
+<%= provide :title, 'About' %>
+<h1>About</h1>
 <p> Get Help on Ruby on Rails tutorial at </p>
 <a href="http://railstutorials.org/help">Rails tutorial help</a>
 </html>
