--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,4 +1,9 @@
 <!DOCTYPE html>
+<!--[if lt IE9]>
+<script
+    src="http://html5shim.googlecode.com/svn/trunk/html5.js">
+</script>
+<! [endif] -->
 <html>
 <head>
   <title><%= full_title(yield :title) %></title>
@@ -7,8 +12,19 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<header class="navbar navbar-fixed-top">
+  <%= link_to "sample app", "#", id: "logo" %>
+  <nav>
+    <ul class="nav pull-right">
+      <li><%= link_to "Home", "#" %></li>
+      <li><%= link_to "Help", "#" %></li>
+      <li><%= link_to "Sign In", "#" %></li>
+    </ul>
+  </nav>
+</header>
 
-<%= yield %>
-
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
