--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,11 @@
-<% provide :title, 'Home' %>
-<h1>Home</h1>
-<p>
+<div class="center hero-unit">
+  <h1>Welcome to Sample App</h1>
+<h2>
   This is home page for the
   <a href="http://railstutorials.org">Ruby on Rails tutorial</a>
-  Sample Application
-</p>
-</html>
+  sample application
+</h2>
+<%= link_to "Sign up now !!!", "#", class:"btn btn-large btn-primary" %>
+</div>
 
+<%= link_to image_tag("rails.png", alt:"Rails"), "http://rubyonrails.org" %>
