--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,30 +1,17 @@
 <!DOCTYPE html>
-<!--[if lt IE9]>
-<script
-    src="http://html5shim.googlecode.com/svn/trunk/html5.js">
-</script>
-<! [endif] -->
 <html>
 <head>
   <title><%= full_title(yield :title) %></title>
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <%= render 'layouts/shim' %>
 </head>
 <body>
-<header class="navbar navbar-fixed-top">
-  <%= link_to "sample app", "#", id: "logo" %>
-  <nav>
-    <ul class="nav pull-right">
-      <li><%= link_to "Home", "#" %></li>
-      <li><%= link_to "Help", "#" %></li>
-      <li><%= link_to "Sign In", "#" %></li>
-    </ul>
-  </nav>
-</header>
-
-<div class="container">
-  <%= yield %>
-</div>
+    <%= render 'layouts/header' %>
+    <div class="container">
+      <%= yield %>
+      <%= render 'layouts/footer' %>
+    </div>
 </body>
 </html>
