--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<%= provide :title, "Home" %>
 <div class="center hero-unit">
   <h1>Welcome to Sample App</h1>
 <h2>
@@ -5,7 +6,7 @@
   <a href="http://railstutorials.org">Ruby on Rails tutorial</a>
   sample application
 </h2>
-<%= link_to "Sign up now !!!", "#", class:"btn btn-large btn-primary" %>
+<%= link_to "Sign up now !!!", sign_up_path, class:"btn btn-large btn-primary" %>
 </div>
 
 <%= link_to image_tag("rails.png", alt:"Rails"), "http://rubyonrails.org" %>
